# dotfiles

./: .gitignore  README  flake.nix
dunst/: dunstrc
firefox/: userChrome.css
htop/: htoprc
icons/: bat-ac.xpm  bat-ch.xpm  bat.xpm  bat_0.xpm  bat_1.xpm  bat_2.xpm  bat_3.xpm  bat_4.xpm  bat_5.xpm  bat_6.xpm  bat_7.xpm  bat_8.xpm  cpu.xpm  date.xpm  headphones.xpm  mem.xpm  mpd.xpm  notification.xpm  pause.xpm  play.xpm  stop.xpm  vbar.xpm  土.xpm  日.xpm  月.xpm  木.xpm  水.xpm  火.xpm  金.xpm
neovim/: init.lua  init.vim  lazy-lock.json
nix/: configuration.nix  firefox-addons.nix  hardware-configuration.nix  home.nix
picom/: picom.conf
stalonetray/: stalonetrayrc
sxhkd/: sxhkdrc
systemd/: ssh-agent.service
tmux/: tmux.conf
xmobar/: xmobarrc
xmonad/: build  custom-xmonad.cabal  package.yaml  stack.yaml  xmonad-d3adb5.cabal  xmonad.hs
xmonad/lib/Config/: Bindings.hs  Dimensions.hs  HandleEventHook.hs  Layouts.hs  LogHook.hs  ManageHook.hs  StartupHook.hs
xmonad/lib/XMonad/Actions/: DmenuWorkspaces.hs  Hidden.hs  Pip.hs
xmonad/lib/XMonad/Layout/: BoringFloats.hs  Hidden.hs  HiddenQueueLayout.hs  SimplestFloat.hs  ZeroBorders.hs
xmonad/lib/XMonad/Util/: CenterRationalRect.hs  DmenuPrompts.hs  Hidden.hs
xmonad/src/: xmonad.hs
xmonad/src/Config/: Bindings.hs  Dimensions.hs  Layouts.hs  LogHook.hs  ManageHook.hs  StartupHook.hs
xmonad/src/XMonad/Actions/: DmenuWorkspaces.hs
xmonad/src/XMonad/Layout/: HiddenQueueLayout.hs
xmonad/src/XMonad/Util/: DmenuPrompts.hs
xorg/: Xmodmap  Xresources  xinitrc
xorg/xkb/: symbols.xkb  (+2 more)
zsh/: README  zshrc
(+32 files in other folders)
